// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css @supports 1`] = `
@supports (display:grid) {
  .glamor-0 {
    display: grid;
  }
}

<div
  className="glamor-0"
/>
`;

exports[`css array with explicit false 1`] = `
.glamor-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="glamor-0"
/>
`;

exports[`css array with explicit true 1`] = `
.glamor-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="glamor-0"
/>
`;

exports[`css auto px 1`] = `
.glamor-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 10px;
}

<div
  className="glamor-0"
/>
`;

exports[`css boolean as value 1`] = `
.glamor-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="glamor-0"
/>
`;

exports[`css composition stuff 1`] = `
.glamor-0 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  className="glamor-0"
/>
`;

exports[`css composition stuff 2`] = `
.glamor-0 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  className="glamor-0"
/>
`;

exports[`css composition with objects 1`] = `
.glamor-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 30px;
  height: calc(40vw - 50px);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.glamor-0:hover {
  color: blue;
}

.glamor-0:after {
  content: " ";
  color: red;
}

@media (min-width:420px) {
  .glamor-0 {
    color: green;
  }
}

<div
  className="glamor-0"
/>
`;

exports[`css computed key is only dynamic 1`] = `
.glamor-0 {
  font-size: 10px;
  width: 20px;
}

<div
  className="glamor-0"
/>
`;

exports[`css css variables 1`] = `
.glamor-0 {
  --some-var: 1px;
  width: var(--some-var);
}

<div
  className="glamor-0"
/>
`;

exports[`css explicit & 1`] = `
<div
  className="css-cls1-16ooeb3 another-class"
/>
`;

exports[`css explicit & 2`] = `
".css-cls1-16ooeb3.another-class {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}"
`;

exports[`css explicit false 1`] = `
<div
  className="css-0"
/>
`;

exports[`css falsy property value in object 1`] = `
.glamor-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="glamor-0"
/>
`;

exports[`css falsy value in nested selector on object 1`] = `
.glamor-0:hover {
  color: hotpink;
}

<div
  className="glamor-0"
/>
`;

exports[`css float property 1`] = `
.glamor-0 {
  float: right;
}

<div
  className="glamor-0"
/>
`;

exports[`css flushes correctly 1`] = `
.glamor-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="glamor-0"
/>
`;

exports[`css flushes correctly 2`] = `
<div
  className="css-cls1-k008qs"
/>
`;

exports[`css handles array of objects 1`] = `
.glamor-0 {
  height: 50px;
  width: 20px;
}

<div
  className="glamor-0"
/>
`;

exports[`css handles more than 10 dynamic properties 1`] = `
.glamor-0 {
  text-decoration: underline;
  border-left: solid blue 54px;
  background: white;
  color: black;
  display: block;
  border-radius: 3px;
  padding: 25px;
  width: 500px;
  z-index: 100;
  font-size: 18px;
  text-align: center;
}

<div
  className="glamor-0"
/>
`;

exports[`css handles objects 1`] = `
.glamor-0 {
  float: right;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: blue;
  font-size: 20px;
  height: 50px;
  width: 20px;
}

<div
  className="glamor-0"
/>
`;

exports[`css media query specificity 1`] = `
".css-cls-mfslnr {
  width: 32px;
  height: 32px;
  border-radius: 50%;
}

@media (min-width:420px) {
  .css-cls-mfslnr {
    width: 96px;
    height: 96px;
  }
}"
`;

exports[`css media query specificity 2`] = `
.glamor-0 {
  width: 32px;
  height: 32px;
  border-radius: 50%;
}

@media (min-width:420px) {
  .glamor-0 {
    width: 96px;
    height: 96px;
  }
}

<div
  className="glamor-0"
/>
`;

exports[`css nested 1`] = `
.glamor-0 {
  color: yellow;
}

.glamor-0 .some-class {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.glamor-0 .some-class .some-other-class {
  background-color: hotpink;
}

@media (max-width:600px) {
  .glamor-0 .some-class {
    background-color: pink;
  }
}

<div
  className="glamor-0"
>
  <div
    className="some-class"
  >
    <div
      className="some-other-class"
    />
  </div>
</div>
`;

exports[`css nested array 1`] = `
.glamor-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="glamor-0"
/>
`;

exports[`css nested at rules 1`] = `
@media (min-width: 420px) {
  .glamor-0 {
    color: pink;
  }
}

@media (min-width: 420px) and  (max-width: 500px) {
  .glamor-0 {
    color: hotpink;
  }
}

@supports (display: grid) {
  .glamor-0 {
    display: grid;
  }
}

@supports (display: grid) and  ((display: -webkit-box) or (display: flex)) {
  .glamor-0 {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
  }
}

<div
  className="glamor-0"
/>
`;

exports[`css nested selector without parent declaration 1`] = `
.glamor-0 {
  color: blue;
}

.glamor-1 .glamor-0 {
  color: red;
}

<div
  className="glamor-1"
>
  <div
    className="glamor-0"
  />
</div>
`;

exports[`css null rule 1`] = `
<div
  className="css-0"
/>
`;

exports[`css null value 1`] = `
<div
  className="css-0"
/>
`;

exports[`css null value 2`] = `
<div
  className="css-cls2-1xdhyk6"
/>
`;

exports[`css random expression 1`] = `
.glamor-0 {
  font-size: 20px;
  background: green;
}

@media (min-width:420px) {
  .glamor-0 {
    color: blue;
    width: 96px;
    height: 96px;
    line-height: 40px;
  }
}

<div
  className="glamor-0"
/>
`;

exports[`css random interpolation with undefined values 1`] = `
.glamor-0 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  className="glamor-0"
/>
`;

exports[`css registered styles as nested selector value in object 1`] = `
.glamor-0:hover {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: hotpink;
}

<div
  className="glamor-0"
/>
`;

exports[`css return function in interpolation 1`] = `
.glamor-0 {
  color: blue;
}

<div
  className="glamor-0"
/>
`;

exports[`css simple composition 1`] = `
.glamor-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.glamor-0:hover {
  color: hotpink;
}

<div
  className="glamor-0"
/>
`;

exports[`css weakmap 1`] = `
.glamor-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="glamor-0"
/>
`;

exports[`css weakmap 2`] = `
.glamor-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="glamor-0"
/>
`;
